@@ -145,7 +145,7 @@ public abstract class SessionManager {
     private void handleSetCookieHeaderForResponse(Exchange exc, Session session) throws Exception {
         Optional<Object> originalCookieValueAtBeginning = Optional.ofNullable(exc.getProperty(SESSION_COOKIE_ORIGINAL));
 
-        if(ttlExpiryRefreshOnAccess || session.isDirty() || !originalCookieValueAtBeginning.isPresent() || cookieRenewalNeeded(originalCookieValueAtBeginning.get().toString())){
+        if(ttlExpiryRefreshOnAccess || session.isDirty() || originalCookieValueAtBeginning.isEmpty() || cookieRenewalNeeded(originalCookieValueAtBeginning.get().toString())){
             String currentCookieValueOfSession = getCookieValue(session);
             if (!ttlExpiryRefreshOnAccess && originalCookieValueAtBeginning.isPresent() &&
                     originalCookieValueAtBeginning.get().toString().trim().equals(currentCookieValueOfSession))
@@ -191,7 +191,7 @@ public abstract class SessionManager {
 
     private void removeRefreshIfNoChangeInExpireTime(Exchange exc, Map<String, List<String>> setCookieHeaders) {
         synchronized (cookieExpireCache) {
-            setCookieHeaders.entrySet().stream().collect(Collectors.toList()).stream() // copy so that map is modifiable
+            setCookieHeaders.entrySet().stream().toList().stream() // copy so that map is modifiable
                     .filter(e -> cookieExpireCache.getIfPresent(e.getKey() + "=true") != null)
                     .forEach(e -> e.getValue().stream().forEach(cookieEntry -> {
                         String cookie = cookieExpireCache.getIfPresent(e.getKey() + "=true");
@@ -206,7 +206,7 @@ public abstract class SessionManager {
     }
 
     private void removeRedundantExpireCookieIfRefreshed(Exchange exc, Map<String, List<String>> setCookieHeaders) {
-        setCookieHeaders.entrySet().stream().collect(Collectors.toList()).stream() // copy so that map is modifiable
+        setCookieHeaders.entrySet().stream().toList().stream() // copy so that map is modifiable
                 .filter(e -> e.getValue().size() > 1)
                 .filter(e -> e.getValue().stream().filter(s -> s.contains(VALUE_TO_EXPIRE_SESSION_IN_BROWSER)).count() == 1)
                 .forEach(e -> {
@@ -234,7 +234,7 @@ public abstract class SessionManager {
     }
 
     private void setCookieForExpiredSessions(Exchange exc, String currentSessionCookieValue) {
-        cookiesToExpire(exc, currentSessionCookieValue).stream()
+        cookiesToExpire(exc, currentSessionCookieValue)
                 .forEach(cookie -> exc.getResponse().getHeader().add(Header.SET_COOKIE, cookie));
     }
 
@@ -266,7 +266,7 @@ public abstract class SessionManager {
             return new Session(usernameKeyName, new HashMap<>());
 
         Map<String, Map<String, Object>> validCookiesAsListOfMaps = convertValidCookiesToAttributes(exc);
-        Session session = new Session(usernameKeyName, mergeCookies(validCookiesAsListOfMaps.values().stream().collect(Collectors.toList())));
+        Session session = new Session(usernameKeyName, mergeCookies(new ArrayList<>(validCookiesAsListOfMaps.values())));
 
         if(validCookiesAsListOfMaps.size() == 1)
             exc.setProperty(SESSION_COOKIE_ORIGINAL,validCookiesAsListOfMaps.keySet().iterator().next());
